# Games

./: CMakeLists.txt  README.md
assets/hangman/: easyWords.txt  hardWords.txt  mediumWords.txt
include/: colors.h  hangman.h  misc.h  tictactoe.h
src/: hangman.cpp  main.cpp  misc.cpp  tictactoe.cpp
src/games/: hangman.h
